--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,16 @@
         android:id="@+id/cadastro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="#634194"
+        android:background="#734BB8"
         android:gravity="left"
         android:padding="16dp"
         android:text="Cadastro"
         android:textColor="@color/white"
         android:textSize="27sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Campo de Nome Completo -->
     <TextView
@@ -44,7 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:background="@color/white"
+            android:background="@drawable/edit_text_border"
             android:gravity="left"
             android:padding="10dp"
             android:textColor="@color/black"
@@ -72,7 +71,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:background="@color/white"
+            android:background="@drawable/edit_text_border"
+            android:hint="Ex: 12-93456-7890"
             android:gravity="left"
             android:padding="10dp"
             android:textColor="@color/black"
@@ -100,7 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:background="@color/white"
+            android:background="@drawable/edit_text_border"
             android:gravity="left"
             android:padding="10dp"
             android:textColor="@color/black"
@@ -175,7 +175,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:background="@color/white"
+            android:background="@drawable/edit_text_border"
             android:gravity="left"
             android:padding="10dp"
             android:textColor="@color/black"
@@ -189,6 +189,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/et_cidade"
+        android:background="@color/white"
         android:text="UF"
         android:textSize="16sp"
         android:layout_margin="8dp" />
@@ -198,6 +199,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:background="@drawable/spinner_background"
         android:entries="@array/uf_array"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@id/uf" />
